# python-hello-docker

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
docs/: options-for-developing.md
src/python_hello_docker/: main.py
tests/: test_main.py
